# morton-throughput

./: .flake8  .gitignore  README.md  Snakefile  main.cpp  pyproject.toml
scripts/: make_plot.py  make_table.py
