[tool.poetry]
name = "morton-throughput"
version = "0.1.0"
description = ""
authors = ["Stephen Nicholas Swatman"]
license = "Unlicense"
readme = "README.md"
packages = [{include = "morton_throughput"}]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
osaca = {git = "https://github.com/stephenswat/OSACA.git", rev = "b6bdbd1"}
snakemake = "^7.32.3"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
flake8-black = "^0.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
